@@ -265,9 +265,6 @@ module Stella
     # If not found, returns nil. 
     def find_replacement_value(name, params, container, base_uri)
       value = nil
-      
-      global_var = RUBY_VERSION < "1.9" ? "$#{name}" : "$#{name}".to_sym
-      
       #Stella.ld "REPLACE: #{name}"
       #Stella.ld "PARAMS: #{params.inspect}"
       #Stella.ld "IVARS: #{container.instance_variables}"
@@ -277,8 +274,8 @@ module Stella
         value = params.delete name.to_sym
       elsif container.resource?( name)
         value = container.resource name
-      elsif Kernel.global_variables.member?(global_var)
-        value = eval(global_var.to_s)
+      elsif Stella::Testplan.global?(name)
+        Stella::Testplan.global(name)
       end
       value
     end 
